--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Captiva Cyber - Enterprise-Grade Cyber Defense, Built For Real-World Business. Where Cyber Security Meets Confidence." />
     <meta name="keywords" content="cybersecurity, cyber defense, security assessment, incident response, threat monitoring" />
