--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://michaelmarshal.github.io/captiva/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Captiva Cyber - Enterprise-Grade Cyber Defense, Built For Real-World Business. Where Cyber Security Meets Confidence." />
     <meta name="keywords" content="cybersecurity, cyber defense, security assessment, incident response, threat monitoring" />
@@ -25,6 +25,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/main.tsx"></script>
+    <script type="module" src="https://michaelmarshal.github.io/captiva/src/main.tsx"></script>
   </body>
 </html>
